@@ -1,3 +1,7 @@
+2002-09-08  Havoc Pennington  <hp@pobox.com>
+
+	* autogen.sh: hardcode automake-1.4
+
 2002-05-15  JP Rosevear  <jpr@ximian.com>
 
 	* gnome-pilot.m4: Fix quoting for AC_MSG_*
